<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/measurementNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_a"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:ellipsize="end"
            android:maxLines="1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/measurementStartEndTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/measurementNameTextView"
            android:text="@string/test_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:layout_marginTop="6dp" />

        <ImageView
            android:id="@+id/iconImageView"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:src="@drawable/baseline_check_24"
            android:contentDescription="@string/state" />

    </RelativeLayout>


</androidx.cardview.widget.CardView>